router: add oss* api & gen swagger.json
